--- a/WithThreadPool/.vscode/settings.json
+++ b/WithThreadPool/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "*.embeddedhtml": "html",
         "chrono": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "sstream": "cpp"
     }
 }
